--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 					<table>
 						<tr>
 							<td><button class="opt" onclick="save()">Save</button></td>
-							<td><button class="opt" onclick="toggleOpt('autosave')">Autosave: {{ player.autosave?"ON":"OFF" }}</button></td>
+							<td><button class="opt">Autosave: ALWAYS OFF</button></td>
 							<td><button class="opt" onclick="hardReset()">HARD RESET</button></td>
 						</tr>
 						<tr>
 							<td><button class="opt" onclick="exportSave()">Export to clipboard</button></td>
 							<td><button class="opt" onclick="importSave()">Import</button></td>
-							<td><button class="opt" onclick="toggleOpt('offlineProd')">Offline Prod: {{ player.offlineProd?"ON":"OFF" }}</button></td>
+							<td><button class="opt">Offline Prod: ALWAYS OFF</button></td>
 						</tr>
 						<tr>
 							<td><button class="opt" onclick="showAllSaves()">All Save Files</button></td>
