Endgame time display is now stopwatch formatted

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<h2>{{modInfo.name}} {{VERSION.withoutName}}</h2><br><br>
 				<h3>Congratulations! You have reached the end and beaten this game, but for now...</h3><br>
 				<h3>Please check the Discord to see if there are new content updates!</h3><br><br>
-				<div v-if="!player.timePlayedReset">It took you {{formatTime(player.timePlayed)}} to beat the game.</div>
+				<div v-if="!player.timePlayedReset">It took you {{formatStopwatch(player.timePlayed)}} to beat the game.</div>
 				<div v-else>Make sure that you record the time in your stream or else your speedrun won't count!</div>
 				<br>
 				<button class="longUpg can" onclick="hardReset(true)">Play Again</button>&nbsp;&nbsp;&nbsp;&nbsp;<button class="longUpg can" onclick="keepGoing()">Keep Going</button>
