--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				Original idea by papyrus#6977 (on discord)
 				<br><br>
 				Note: If anyone wishes to make a mod of this game, that is perfectly fine with me, just make sure to name it something different (ex: Prestige Tree NG+), and to make sure that the credit shown above is kept in-game.<br><br>
-				<a v-bind:href="modInfo.changelogLink" target="_blank" class="link" >Changelog</a><br>
+				<a v-bind:href="modInfo.changelogLink" target="_blank" class="link" >PTR Changelog</a><br>
 				<a class="link" href="http://discord.gg/wwQfgPa" target="_blank" v-bind:style="{'font-size': '16px'}">The Prestige Tree Discord</a><br>
 				<a class="link" href="https://discord.gg/F3xveHV" target="_blank" v-bind:style="modInfo.discordLink ? {'font-size': '16px'} : {}">The Modding Tree Discord</a><br>
 				<a class="link pat" href="http://patreon.com/Jacorb90" target="_blank" v-bind:style="{'font-size': '18px'}">Donate</a><br>
