--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 				Time Played: {{ formatTime(player.timePlayed) }}<br>
 				<span v-for="layer in LAYERS"><span v-if="player[layer].first!==undefined && player[layer].unlocked">First {{layer}} reset: {{formatTime(player[layer].first)}} (really {{ formatStopwatch(player[layer].first - player.p.first) }})<br></span></span><br>
 				<h3>Hotkeys</h3><br>
-				<span><br>k to quicksave</span>
-				<span><br>l to quickload</span>
+				<span><br>Press k to Quicksave</span>
+				<span><br>Press l to Quickload</span>
 				<span v-for="key in hotkeys" v-if="player[key.layer].unlocked"><br>{{key.description}}</span>
 				<br>Press - to Show Formulas
 			</div>
