--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				</div><div v-if="player.optTab=='dijkstraOpt'">
 					<table>
 						<tr>
-							<td><button class="opt" onclick="cycleOptions(player, 'layerSaveSettings', saveSettings)">Layer Save Overwrite Settings: {{ player.layerSaveSettings }}</button></td>
+							<td><button class="opt" onclick="cycleOptions(player, 'layerSaveSettings', saveSettings)">Layer Save Overwrite: {{ player.layerSaveSettings }}</button></td>
 						</tr>
 					</table>
 				</div><br><br>
