Export import all saves?

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 					<table>
 						<tr>
 							<td><button class="opt" onclick="cycleOptions(player, 'layerSaveSettings', saveSettings)">Layer Save Overwrite: {{ player.layerSaveSettings }}</button></td>
+							<td><button class="opt" onclick="backupSaves()">Backup All Saves</button></td>
+							<td><button class="opt" onclick="importSaves()">Import All Saves</button></td>
 						</tr>
 					</table>
 				</div><br><br>
