Quicksaving changed to look better and prevent naming/renaming in a silly way

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<table>
 						<tr>
 							<td><button class="opt" onclick="save()">Save</button></td>
-							<td><button class="opt" onclick="toggleOpt('autosave')">Autosave (breaks quicksave): {{player.autosave?"ON":"OFF"}}</button></td>
+							<td><button class="opt" onclick="toggleOpt('autosave')">Autosave (overwrites manual quicksaving): {{player.autosave?"ON":"OFF"}}</button></td>
 							<td><button class="opt" onclick="hardReset()">HARD RESET</button></td>
 						</tr>
 						<tr>
